# CAR.V1

./: .gitattributes  .gitignore  03_Codex启动提示词（v3）.md  AGENTS.md  Dockerfile.car  README.md  colcon-defaults.yaml
src/ranger_mini3_mode_controller/: CMakeLists.txt  README.md  package.xml
src/ranger_mini3_mode_controller/config/: ranger_mini3_mode_controller.yaml
src/ranger_mini3_mode_controller/launch/: ranger_mini3_mode_controller.launch.py
src/ranger_mini3_mode_controller/src/: mode_controller_node.cpp
src/robot_api_server/: CMakeLists.txt  README.md  package.xml
src/robot_api_server/config/: robot_api_server.yaml
src/robot_api_server/include/robot_api_server/: file_utils.hpp  (+22 more)
src/robot_api_server/launch/: robot_api_server.launch.py
src/robot_api_server/src/: api_time_utils.cpp  bms_contact.cpp  docking_job_model.cpp  docking_status_utils.cpp  file_utils.cpp  floor_asset_resolver.cpp  http_common.cpp  localization_result_model.cpp  map_asset_io.cpp  map_asset_writer.cpp  map_catalog.cpp  map_manifest_io.cpp  navigation_cancel_job_model.cpp  poses_io.cpp  robot_api_server_node.cpp  robot_pose_model.cpp  runtime_map_context_io.cpp  runtime_map_lookup.cpp  runtime_process_utils.cpp  semantic_layer_io.cpp  storage_models.cpp  subscription_api.cpp  subscription_manager.cpp  tf_pose_utils.cpp
src/robot_bringup/: CMakeLists.txt  README.md  package.xml
src/robot_bringup/config/: bringup.yaml
src/robot_bringup/launch/: local_costmap_debug.launch.py  localization_bringup.launch.py  mock_navigation.launch.py  navigation_bringup.launch.py  standard_navigation.launch.py
src/robot_bringup/src/: runtime_readiness_probe.cpp
src/robot_chassis_bridge/: CMakeLists.txt  README.md  package.xml
src/robot_chassis_bridge/config/: chassis_bridge.yaml
src/robot_chassis_bridge/launch/: chassis_bridge.launch.py
src/robot_chassis_bridge/scripts/: chassis_bridge_node.py
src/robot_description/: CMakeLists.txt  README.md  package.xml
src/robot_description/config/: sensors.yaml
src/robot_description/launch/: description.launch.py
src/robot_description/src/: static_tf_node.cpp
src/robot_description/urdf/: robot.urdf.xacro
src/robot_docking_manager/: CMakeLists.txt  README.md  package.xml
src/robot_docking_manager/launch/: docking_manager.launch.py
src/robot_docking_manager/src/: docking_manager_node.cpp
src/robot_eai_gs2/: CMakeLists.txt  README.md  package.xml
src/robot_eai_gs2/config/: gs2.yaml
src/robot_eai_gs2/launch/: gs2.launch.py
src/robot_eai_gs2/src/: gs2_driver_node.cpp
src/robot_fastlio_mapping/: CMakeLists.txt  README.md  package.xml
src/robot_fastlio_mapping/config/: fastlio.yaml
src/robot_fastlio_mapping/launch/: fastlio.launch.py
src/robot_fastlio_mapping/scripts/: fastlio_odom_bridge_node.py  fastlio_wrapper_node.py
src/robot_fastlio_mapping/src/: fastlio_odom_bridge_node.cpp
src/robot_floor_manager/: CMakeLists.txt  README.md  package.xml
src/robot_floor_manager/config/: floor_manager.yaml
src/robot_floor_manager/launch/: floor_manager.launch.py
src/robot_floor_manager/src/: floor_manager_node.cpp
src/robot_global_localization/: CMakeLists.txt  README.md  package.xml
src/robot_global_localization/config/: global_localization.yaml
src/robot_global_localization/launch/: global_localization.launch.py
src/robot_global_localization/scripts/: global_localization_node.py
src/robot_global_localization/src/: global_localization_node.cpp
src/robot_hesai_jt128/: CMakeLists.txt  README.md  package.xml
src/robot_hesai_jt128/config/: jt128.yaml
src/robot_hesai_jt128/launch/: jt128.launch.py
src/robot_hesai_jt128/scripts/: jt128_wrapper_node.py
src/robot_hesai_jt128/src/: hesai_accel_driver_node.cpp  imu_axis_remap_node.cpp  pointcloud_accel_axis_node.cpp  pointcloud_accel_core.cpp  pointcloud_axis_remap_node.cpp  pointcloud_downsample_node.cpp  scan_republisher_node.cpp
src/robot_interfaces/: CMakeLists.txt  README.md  package.xml
src/robot_interfaces/action/: ElevatorTask.action  MissionTask.action
src/robot_interfaces/msg/: HealthStatus.msg  LocalizationHealth.msg  MappingJobStatus.msg
src/robot_interfaces/srv/: ApplyFloorAssets.srv  SwitchFloor.srv
src/robot_isaac_nitros_pointcloud/: CMakeLists.txt  package.xml
src/robot_isaac_nitros_pointcloud/launch/: nitros_pointcloud_branch.launch.py
src/robot_local_perception/: CMakeLists.txt  README.md  package.xml
src/robot_local_perception/config/: local_perception.yaml
src/robot_local_perception/launch/: local_perception.launch.py
src/robot_local_perception/scripts/: local_perception_node.py
src/robot_local_perception/src/: local_perception_node.cpp
src/robot_local_state/: CMakeLists.txt  README.md  package.xml
src/robot_local_state/config/: local_state.yaml  local_state_ekf.yaml  local_state_ekf_twist_imu.yaml  local_state_ekf_twist_imu_vyaw_only.yaml  local_state_ekf_wheel_imu_primary_vyaw.yaml  local_state_ekf_wheel_pose_imu_vyaw.yaml  local_state_ekf_wheel_spin_imu.yaml  local_state_ekf_wheel_xy_imu_yaw.yaml  local_state_fastlio.yaml  local_state_imu_bias_filter.yaml  local_state_wheel_odom_ekf.yaml  local_state_wheel_odom_ekf_soft_yaw.yaml  local_state_wheel_odom_ekf_soft_yaw_014.yaml  local_state_wheel_odom_ekf_soft_yaw_016.yaml  local_state_wheel_odom_ekf_spin_imu.yaml  local_state_wheel_odom_ekf_xy_lateral_m040.yaml  local_state_wheel_odom_ekf_xy_lateral_m050.yaml  local_state_wheel_odom_ekf_xy_lateral_m061.yaml  local_state_wheel_odom_ekf_xy_lateral_m085.yaml  local_state_wheel_odom_ekf_xy_lateral_m120.yaml  local_state_wheel_odom_ekf_xy_lateral_yaw_p979_n1011.yaml
src/robot_local_state/launch/: local_state.launch.py
src/robot_local_state/scripts/: local_state_node.py
src/robot_local_state/src/: imu_gyro_bias_filter_node.cpp  local_state_node.cpp
src/robot_local_state/test/: test_spin_yaw_corrector.cpp  test_stationary_gate.cpp
src/robot_localization_bridge/: CMakeLists.txt  README.md  package.xml
src/robot_localization_bridge/config/: localization_bridge.yaml
src/robot_localization_bridge/launch/: localization_bridge.launch.py
(+398 files in other folders)
