<?xml version="1.0"?>
<package format="3">
  <name>ranger_mini3_mode_controller</name>
  <version>0.1.0</version>
  <description>Mode-aware Twist shaping layer for AgileX Ranger Mini 3 before ranger_base_node.</description>
  <maintainer email="user@example.com">NJRH</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
