<?xml version="1.0"?>
<package format="3">
  <name>robot_api_server</name>
  <version>0.1.0</version>
  <description>HTTP API gateway for Android and operator clients.</description>
  <maintainer email="ops@example.invalid">NJRH Robot Team</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>robot_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
