<?xml version="1.0"?>
<package format="3">
  <name>robot_chassis_bridge</name>
  <version>0.1.0</version>
  <description>Standardized chassis wrapper for wheel odometry, cmd_vel forwarding, and diagnostics.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <export/>
</package>
