<?xml version="1.0"?>
<package format="3">
  <name>robot_docking_manager</name>
  <version>0.1.0</version>
  <description>GS2-based near-field docking controller for the Ranger Mini 3 charging dock.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <exec_depend>robot_nav_config</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
