<?xml version="1.0"?>
<package format="3">
  <name>robot_eai_gs2</name>
  <version>0.1.0</version>
  <description>ROS 2 wrapper for the EAI/YDLIDAR GS2 near-field lidar used by docking.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>Apache-2.0</license>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
