<?xml version="1.0"?>
<package format="3">
  <name>robot_fastlio_mapping</name>
  <version>0.1.0</version>
  <description>FAST-LIO2 frontend wrapper with standardized output artifacts and TF suppression hooks.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export/>
</package>
