<?xml version="1.0"?>
<package format="3">
  <name>robot_global_localization</name>
  <version>0.1.0</version>
  <description>Pointcloud to flatscan plus Isaac localizer wrapper with floor asset reload hooks.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>isaac_ros_pointcloud_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>robot_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <export/>
</package>
