<?xml version="1.0"?>
<package format="3">
  <name>robot_hesai_jt128</name>
  <version>0.1.0</version>
  <description>JT128 wrapper with local-first config injection and mock or bag support.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
