<?xml version="1.0"?>
<package format="3">
  <name>robot_local_perception</name>
  <version>0.1.0</version>
  <description>Local obstacle cloud filtering for the canonical Nav2 local costmap input.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <exec_depend>rclpy</exec_depend>
  <depend>sensor_msgs</depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
