<?xml version="1.0"?>
<package format="3">
  <name>robot_local_state</name>
  <version>0.1.0</version>
  <description>Local odometry source and only owner of odom to base_link in the canonical tree.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <exec_depend>robot_localization</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
