<?xml version="1.0"?>
<package format="3">
  <name>robot_localization_bridge</name>
  <version>0.1.0</version>
  <description>Canonical map to odom bridge with jump suppression and timeout gating hooks.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <export/>
</package>
